# hardware-meter

./: .gitignore  Cargo.toml  README.md  tray-config.rc
.github/workflows/: main.yml
3d models/85c1-back-cover-type-c/: 85c1-back-cover-type-c.f3d  85c1-back-cover-type-c.stl  README.md
3d models/91c4-housing-3x/: 91c4-housing-3x-cover.stl  91c4-housing-3x.f3d  91c4-housing-3x.stl  README.md
devices/arduino/: arduino.ino
devices/stm32f1/: .cproject  .mxproject  .project  Makefile  cpu-meter-stm32f1.ioc
devices/stm32f1/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c
devices/stm32f1/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
devices/stm32f4/: .cproject  .mxproject  .project  Makefile  cpu-meter-stm32f4.ioc
devices/stm32f4/Core/Inc/: stm32f4xx_hal_conf.h
devices/stm32f4/Core/Src/: gpio.c  main.c  tim.c
devices/stm32f4/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
src/: common.rs  index.html  main.js  main.rs  serial.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  common.rs  main.rs  serial.rs
