[package]
name = "cpu-meter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0"
open = "5.1"
sysinfo = "0.30"
serialport = "4.3"
strum = "0.26"
strum_macros = "0.26"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-item = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10", features = ["ksni"] }

[build-dependencies]
embed-resource = "2.3"
