[package]
name = "cpu-meter"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

directories = "5.0"
notify = "6.1"
notify-debouncer-mini = "0.4"
open = "5.1"
serialport = "4.3"
strum = "0.26"
strum_macros = "0.26"
sysinfo = "0.30"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
